syntax = "proto3";
package tutorial;
option java_package = "com.example.customerproto.generated";

message CustomerProto {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string mobile_number = 5;
  repeated ProductOrderProto product_order = 6;
}

message ProductOrderProto {
  string order_id = 1;
  string product_id = 2;
  string product_name = 3;
  float price = 4;
}

